parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file
Rule 1     file -> unit
Rule 2     file -> file unit
Rule 3     unit -> fun_def
Rule 4     unit -> declaration ;
Rule 5     fun_def -> declaration_specifier ID ( ) compound_statement
Rule 6     fun_def -> declaration_specifier ID ( declaration_list ) compound_statement
Rule 7     statement -> expression ;
Rule 8     statement -> declaration ;
Rule 9     statement -> compound_statement
Rule 10    expression -> ID ( )
Rule 11    expression -> ID ( expression_list )
Rule 12    expression -> PRINTSTR ( S_CONST )
Rule 13    declaration_specifier -> VOID
Rule 14    declaration_specifier -> INT
Rule 15    declaration_specifier -> CHAR
Rule 16    declaration_specifier -> INT pointer
Rule 17    declaration_specifier -> CHAR pointer
Rule 18    statement -> RETURN expression ;
Rule 19    statement -> RETURN ;
Rule 20    statement -> BREAK ;
Rule 21    statement -> CONTINUE ;
Rule 22    statement -> WHILE ( expression ) statement
Rule 23    statement -> DO statement WHILE ( expression ) ;
Rule 24    statement -> FOR ( expression ; expression ; expression ) statement
Rule 25    statement -> IF ( expression ) statement
Rule 26    statement -> IF ( expression ) statement ELSE statement
Rule 27    declaration -> declaration_specifier ID [ NUMBER ] = { expression_list }
Rule 28    declaration -> declaration_specifier ID [ NUMBER ]
Rule 29    declaration -> declaration_specifier ID = expression
Rule 30    declaration -> declaration_specifier ID
Rule 31    expression -> MINUSMINUS ID
Rule 32    expression -> ID MINUSMINUS
Rule 33    expression -> PLUSPLUS ID
Rule 34    expression -> ID PLUSPLUS
Rule 35    expression -> ID XOREQUAL expression
Rule 36    expression -> ID ANDEQUAL expression
Rule 37    expression -> ID OREQUAL expression
Rule 38    expression -> ID TIMESEQUAL expression
Rule 39    expression -> ID DIVEQUAL expression
Rule 40    expression -> ID PLUSEQUAL expression
Rule 41    expression -> ID MINUSEQUAL expression
Rule 42    expression -> ID = expression
Rule 43    expression_list -> expression
Rule 44    expression_list -> expression_list , expression
Rule 45    declaration_list -> declaration
Rule 46    declaration_list -> declaration_list , declaration
Rule 47    expression -> expression + expression
Rule 48    expression -> expression - expression
Rule 49    expression -> expression * expression
Rule 50    expression -> expression / expression
Rule 51    expression -> expression & expression
Rule 52    expression -> expression | expression
Rule 53    expression -> expression ^ expression
Rule 54    expression -> ~ expression
Rule 55    expression -> - expression
Rule 56    expression -> ( expression )
Rule 57    expression -> ID [ expression ]
Rule 58    expression -> ID [ expression ] = expression
Rule 59    expression -> NUMBER
Rule 60    expression -> ID
Rule 61    expression -> & ID
Rule 62    expression -> & ID [ expression ]
Rule 63    expression -> * ID = expression
Rule 64    expression -> * ID
Rule 65    pointer -> *
Rule 66    pointer -> pointer *
Rule 67    expression -> C_CONST
Rule 68    expression -> eq_exp
Rule 69    eq_exp -> expression EQ expression
Rule 70    eq_exp -> expression NE expression
Rule 71    eq_exp -> expression LOR expression
Rule 72    eq_exp -> expression LAND expression
Rule 73    eq_exp -> expression < expression
Rule 74    eq_exp -> expression > expression
Rule 75    eq_exp -> expression GE expression
Rule 76    eq_exp -> expression LE expression
Rule 77    compound_statement -> { statement_list }
Rule 78    compound_statement -> { }
Rule 79    statement_list -> statement
Rule 80    statement_list -> statement_list statement

Terminals, with rules where they appear

&                    : 51 61 62
(                    : 5 6 10 11 12 22 23 24 25 26 56
)                    : 5 6 10 11 12 22 23 24 25 26 56
*                    : 49 63 64 65 66
+                    : 47
,                    : 44 46
-                    : 48 55
/                    : 50
;                    : 4 7 8 18 19 20 21 23 24 24
<                    : 73
=                    : 27 29 42 58 63
>                    : 74
ANDEQUAL             : 36
BREAK                : 20
CHAR                 : 15 17
CONTINUE             : 21
C_CONST              : 67
DIVEQUAL             : 39
DO                   : 23
ELSE                 : 26
EQ                   : 69
FOR                  : 24
GE                   : 75
ID                   : 5 6 10 11 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 57 58 60 61 62 63 64
IF                   : 25 26
INT                  : 14 16
LAND                 : 72
LE                   : 76
LOR                  : 71
MINUSEQUAL           : 41
MINUSMINUS           : 31 32
NE                   : 70
NUMBER               : 27 28 59
OREQUAL              : 37
PLUSEQUAL            : 40
PLUSPLUS             : 33 34
PRINTSTR             : 12
RETURN               : 18 19
S_CONST              : 12
TIMESEQUAL           : 38
VOID                 : 13
WHILE                : 22 23
XOREQUAL             : 35
[                    : 27 28 57 58 62
]                    : 27 28 57 58 62
^                    : 53
error                : 
{                    : 27 77 78
|                    : 52
}                    : 27 77 78
~                    : 54

Nonterminals, with rules where they appear

compound_statement   : 5 6 9
declaration          : 4 8 45 46
declaration_list     : 6 46
declaration_specifier : 5 6 27 28 29 30
eq_exp               : 68
expression           : 7 18 22 23 24 24 24 25 26 29 35 36 37 38 39 40 41 42 43 44 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 55 56 57 58 58 62 63 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76
expression_list      : 11 27 44
file                 : 2 0
fun_def              : 3
pointer              : 16 17 66
statement            : 22 23 24 25 26 26 79 80
statement_list       : 77 80
unit                 : 1 2

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . unit
    (2) file -> . file unit
    (3) unit -> . fun_def
    (4) unit -> . declaration ;
    (5) fun_def -> . declaration_specifier ID ( ) compound_statement
    (6) fun_def -> . declaration_specifier ID ( declaration_list ) compound_statement
    (27) declaration -> . declaration_specifier ID [ NUMBER ] = { expression_list }
    (28) declaration -> . declaration_specifier ID [ NUMBER ]
    (29) declaration -> . declaration_specifier ID = expression
    (30) declaration -> . declaration_specifier ID
    (13) declaration_specifier -> . VOID
    (14) declaration_specifier -> . INT
    (15) declaration_specifier -> . CHAR
    (16) declaration_specifier -> . INT pointer
    (17) declaration_specifier -> . CHAR pointer

    VOID            shift and go to state 6
    INT             shift and go to state 7
    CHAR            shift and go to state 8

    file                           shift and go to state 1
    unit                           shift and go to state 2
    fun_def                        shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifier          shift and go to state 5

state 1

    (0) S' -> file .
    (2) file -> file . unit
    (3) unit -> . fun_def
    (4) unit -> . declaration ;
    (5) fun_def -> . declaration_specifier ID ( ) compound_statement
    (6) fun_def -> . declaration_specifier ID ( declaration_list ) compound_statement
    (27) declaration -> . declaration_specifier ID [ NUMBER ] = { expression_list }
    (28) declaration -> . declaration_specifier ID [ NUMBER ]
    (29) declaration -> . declaration_specifier ID = expression
    (30) declaration -> . declaration_specifier ID
    (13) declaration_specifier -> . VOID
    (14) declaration_specifier -> . INT
    (15) declaration_specifier -> . CHAR
    (16) declaration_specifier -> . INT pointer
    (17) declaration_specifier -> . CHAR pointer

    VOID            shift and go to state 6
    INT             shift and go to state 7
    CHAR            shift and go to state 8

    unit                           shift and go to state 9
    fun_def                        shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifier          shift and go to state 5

state 2

    (1) file -> unit .

    VOID            reduce using rule 1 (file -> unit .)
    INT             reduce using rule 1 (file -> unit .)
    CHAR            reduce using rule 1 (file -> unit .)
    $end            reduce using rule 1 (file -> unit .)


state 3

    (3) unit -> fun_def .

    VOID            reduce using rule 3 (unit -> fun_def .)
    INT             reduce using rule 3 (unit -> fun_def .)
    CHAR            reduce using rule 3 (unit -> fun_def .)
    $end            reduce using rule 3 (unit -> fun_def .)


state 4

    (4) unit -> declaration . ;

    ;               shift and go to state 10


state 5

    (5) fun_def -> declaration_specifier . ID ( ) compound_statement
    (6) fun_def -> declaration_specifier . ID ( declaration_list ) compound_statement
    (27) declaration -> declaration_specifier . ID [ NUMBER ] = { expression_list }
    (28) declaration -> declaration_specifier . ID [ NUMBER ]
    (29) declaration -> declaration_specifier . ID = expression
    (30) declaration -> declaration_specifier . ID

    ID              shift and go to state 11


state 6

    (13) declaration_specifier -> VOID .

    ID              reduce using rule 13 (declaration_specifier -> VOID .)


state 7

    (14) declaration_specifier -> INT .
    (16) declaration_specifier -> INT . pointer
    (65) pointer -> . *
    (66) pointer -> . pointer *

    ID              reduce using rule 14 (declaration_specifier -> INT .)
    *               shift and go to state 13

    pointer                        shift and go to state 12

state 8

    (15) declaration_specifier -> CHAR .
    (17) declaration_specifier -> CHAR . pointer
    (65) pointer -> . *
    (66) pointer -> . pointer *

    ID              reduce using rule 15 (declaration_specifier -> CHAR .)
    *               shift and go to state 13

    pointer                        shift and go to state 14

state 9

    (2) file -> file unit .

    VOID            reduce using rule 2 (file -> file unit .)
    INT             reduce using rule 2 (file -> file unit .)
    CHAR            reduce using rule 2 (file -> file unit .)
    $end            reduce using rule 2 (file -> file unit .)


state 10

    (4) unit -> declaration ; .

    VOID            reduce using rule 4 (unit -> declaration ; .)
    INT             reduce using rule 4 (unit -> declaration ; .)
    CHAR            reduce using rule 4 (unit -> declaration ; .)
    $end            reduce using rule 4 (unit -> declaration ; .)


state 11

    (5) fun_def -> declaration_specifier ID . ( ) compound_statement
    (6) fun_def -> declaration_specifier ID . ( declaration_list ) compound_statement
    (27) declaration -> declaration_specifier ID . [ NUMBER ] = { expression_list }
    (28) declaration -> declaration_specifier ID . [ NUMBER ]
    (29) declaration -> declaration_specifier ID . = expression
    (30) declaration -> declaration_specifier ID .

    (               shift and go to state 15
    [               shift and go to state 16
    =               shift and go to state 17
    ;               reduce using rule 30 (declaration -> declaration_specifier ID .)


state 12

    (16) declaration_specifier -> INT pointer .
    (66) pointer -> pointer . *

    ID              reduce using rule 16 (declaration_specifier -> INT pointer .)
    *               shift and go to state 18


state 13

    (65) pointer -> * .

    *               reduce using rule 65 (pointer -> * .)
    ID              reduce using rule 65 (pointer -> * .)


state 14

    (17) declaration_specifier -> CHAR pointer .
    (66) pointer -> pointer . *

    ID              reduce using rule 17 (declaration_specifier -> CHAR pointer .)
    *               shift and go to state 18


state 15

    (5) fun_def -> declaration_specifier ID ( . ) compound_statement
    (6) fun_def -> declaration_specifier ID ( . declaration_list ) compound_statement
    (45) declaration_list -> . declaration
    (46) declaration_list -> . declaration_list , declaration
    (27) declaration -> . declaration_specifier ID [ NUMBER ] = { expression_list }
    (28) declaration -> . declaration_specifier ID [ NUMBER ]
    (29) declaration -> . declaration_specifier ID = expression
    (30) declaration -> . declaration_specifier ID
    (13) declaration_specifier -> . VOID
    (14) declaration_specifier -> . INT
    (15) declaration_specifier -> . CHAR
    (16) declaration_specifier -> . INT pointer
    (17) declaration_specifier -> . CHAR pointer

    )               shift and go to state 20
    VOID            shift and go to state 6
    INT             shift and go to state 7
    CHAR            shift and go to state 8

    declaration_specifier          shift and go to state 19
    declaration_list               shift and go to state 21
    declaration                    shift and go to state 22

state 16

    (27) declaration -> declaration_specifier ID [ . NUMBER ] = { expression_list }
    (28) declaration -> declaration_specifier ID [ . NUMBER ]

    NUMBER          shift and go to state 23


state 17

    (29) declaration -> declaration_specifier ID = . expression
    (10) expression -> . ID ( )
    (11) expression -> . ID ( expression_list )
    (12) expression -> . PRINTSTR ( S_CONST )
    (31) expression -> . MINUSMINUS ID
    (32) expression -> . ID MINUSMINUS
    (33) expression -> . PLUSPLUS ID
    (34) expression -> . ID PLUSPLUS
    (35) expression -> . ID XOREQUAL expression
    (36) expression -> . ID ANDEQUAL expression
    (37) expression -> . ID OREQUAL expression
    (38) expression -> . ID TIMESEQUAL expression
    (39) expression -> . ID DIVEQUAL expression
    (40) expression -> . ID PLUSEQUAL expression
    (41) expression -> . ID MINUSEQUAL expression
    (42) expression -> . ID = expression
    (47) expression -> . expression + expression
    (48) expression -> . expression - expression
    (49) expression -> . expression * expression
    (50) expression -> . expression / expression
    (51) expression -> . expression & expression
    (52) expression -> . expression | expression
    (53) expression -> . expression ^ expression
    (54) expression -> . ~ expression
    (55) expression -> . - expression
    (56) expression -> . ( expression )
    (57) expression -> . ID [ expression ]
    (58) expression -> . ID [ expression ] = expression
    (59) expression -> . NUMBER
    (60) expression -> . ID
    (61) expression -> . & ID
    (62) expression -> . & ID [ expression ]
    (63) expression -> . * ID = expression
    (64) expression -> . * ID
    (67) expression -> . C_CONST
    (68) expression -> . eq_exp
    (69) eq_exp -> . expression EQ expression
    (70) eq_exp -> . expression NE expression
    (71) eq_exp -> . expression LOR expression
    (72) eq_exp -> . expression LAND expression
    (73) eq_exp -> . expression < expression
    (74) eq_exp -> . expression > expression
    (75) eq_exp -> . expression GE expression
    (76) eq_exp -> . expression LE expression

    ID              shift and go to state 24
    PRINTSTR        shift and go to state 27
    MINUSMINUS      shift and go to state 28
    PLUSPLUS        shift and go to state 29
    ~               shift and go to state 33
    -               shift and go to state 30
    (               shift and go to state 26
    NUMBER          shift and go to state 34
    &               shift and go to state 32
    *               shift and go to state 31
    C_CONST         shift and go to state 35

    expression                     shift and go to state 25
    eq_exp                         shift and go to state 36

state 18

    (66) pointer -> pointer * .

    *               reduce using rule 66 (pointer -> pointer * .)
    ID              reduce using rule 66 (pointer -> pointer * .)


state 19

    (27) declaration -> declaration_specifier . ID [ NUMBER ] = { expression_list }
    (28) declaration -> declaration_specifier . ID [ NUMBER ]
    (29) declaration -> declaration_specifier . ID = expression
    (30) declaration -> declaration_specifier . ID

    ID              shift and go to state 37


state 20

    (5) fun_def -> declaration_specifier ID ( ) . compound_statement
    (77) compound_statement -> . { statement_list }
    (78) compound_statement -> . { }

    {               shift and go to state 39

    compound_statement             shift and go to state 38

state 21

    (6) fun_def -> declaration_specifier ID ( declaration_list . ) compound_statement
    (46) declaration_list -> declaration_list . , declaration

    )               shift and go to state 40
    ,               shift and go to state 41


state 22

    (45) declaration_list -> declaration .

    )               reduce using rule 45 (declaration_list -> declaration .)
    ,               reduce using rule 45 (declaration_list -> declaration .)


state 23

    (27) declaration -> declaration_specifier ID [ NUMBER . ] = { expression_list }
    (28) declaration -> declaration_specifier ID [ NUMBER . ]

    ]               shift and go to state 42


state 24

    (10) expression -> ID . ( )
    (11) expression -> ID . ( expression_list )
    (32) expression -> ID . MINUSMINUS
    (34) expression -> ID . PLUSPLUS
    (35) expression -> ID . XOREQUAL expression
    (36) expression -> ID . ANDEQUAL expression
    (37) expression -> ID . OREQUAL expression
    (38) expression -> ID . TIMESEQUAL expression
    (39) expression -> ID . DIVEQUAL expression
    (40) expression -> ID . PLUSEQUAL expression
    (41) expression -> ID . MINUSEQUAL expression
    (42) expression -> ID . = expression
    (57) expression -> ID . [ expression ]
    (58) expression -> ID . [ expression ] = expression
    (60) expression -> ID .

    (               shift and go to state 43
    MINUSMINUS      shift and go to state 44
    PLUSPLUS        shift and go to state 45
    XOREQUAL        shift and go to state 46
    ANDEQUAL        shift and go to state 47
    OREQUAL         shift and go to state 48
    TIMESEQUAL      shift and go to state 49
    DIVEQUAL        shift and go to state 50
    PLUSEQUAL       shift and go to state 51
    MINUSEQUAL      shift and go to state 52
    =               shift and go to state 53
    [               shift and go to state 54
    +               reduce using rule 60 (expression -> ID .)
    -               reduce using rule 60 (expression -> ID .)
    *               reduce using rule 60 (expression -> ID .)
    /               reduce using rule 60 (expression -> ID .)
    &               reduce using rule 60 (expression -> ID .)
    |               reduce using rule 60 (expression -> ID .)
    ^               reduce using rule 60 (expression -> ID .)
    EQ              reduce using rule 60 (expression -> ID .)
    NE              reduce using rule 60 (expression -> ID .)
    LOR             reduce using rule 60 (expression -> ID .)
    LAND            reduce using rule 60 (expression -> ID .)
    <               reduce using rule 60 (expression -> ID .)
    >               reduce using rule 60 (expression -> ID .)
    GE              reduce using rule 60 (expression -> ID .)
    LE              reduce using rule 60 (expression -> ID .)
    ;               reduce using rule 60 (expression -> ID .)
    )               reduce using rule 60 (expression -> ID .)
    ,               reduce using rule 60 (expression -> ID .)
    ]               reduce using rule 60 (expression -> ID .)
    }               reduce using rule 60 (expression -> ID .)


state 25

    (29) declaration -> declaration_specifier ID = expression .
    (47) expression -> expression . + expression
    (48) expression -> expression . - expression
    (49) expression -> expression . * expression
    (50) expression -> expression . / expression
    (51) expression -> expression . & expression
    (52) expression -> expression . | expression
    (53) expression -> expression . ^ expression
    (69) eq_exp -> expression . EQ expression
    (70) eq_exp -> expression . NE expression
    (71) eq_exp -> expression . LOR expression
    (72) eq_exp -> expression . LAND expression
    (73) eq_exp -> expression . < expression
    (74) eq_exp -> expression . > expression
    (75) eq_exp -> expression . GE expression
    (76) eq_exp -> expression . LE expression

    ;               reduce using rule 29 (declaration -> declaration_specifier ID = expression .)
    )               reduce using rule 29 (declaration -> declaration_specifier ID = expression .)
    ,               reduce using rule 29 (declaration -> declaration_specifier ID = expression .)
    +               shift and go to state 55
    -               shift and go to state 56
    *               shift and go to state 57
    /               shift and go to state 58
    &               shift and go to state 59
    |               shift and go to state 60
    ^               shift and go to state 61
    EQ              shift and go to state 62
    NE              shift and go to state 63
    LOR             shift and go to state 64
    LAND            shift and go to state 65
    <               shift and go to state 66
    >               shift and go to state 67
    GE              shift and go to state 68
    LE              shift and go to state 69


state 26

    (56) expression -> ( . expression )
    (10) expression -> . ID ( )
    (11) expression -> . ID ( expression_list )
    (12) expression -> . PRINTSTR ( S_CONST )
    (31) expression -> . MINUSMINUS ID
    (32) expression -> . ID MINUSMINUS
    (33) expression -> . PLUSPLUS ID
    (34) expression -> . ID PLUSPLUS
    (35) expression -> . ID XOREQUAL expression
    (36) expression -> . ID ANDEQUAL expression
    (37) expression -> . ID OREQUAL expression
    (38) expression -> . ID TIMESEQUAL expression
    (39) expression -> . ID DIVEQUAL expression
    (40) expression -> . ID PLUSEQUAL expression
    (41) expression -> . ID MINUSEQUAL expression
    (42) expression -> . ID = expression
    (47) expression -> . expression + expression
    (48) expression -> . expression - expression
    (49) expression -> . expression * expression
    (50) expression -> . expression / expression
    (51) expression -> . expression & expression
    (52) expression -> . expression | expression
    (53) expression -> . expression ^ expression
    (54) expression -> . ~ expression
    (55) expression -> . - expression
    (56) expression -> . ( expression )
    (57) expression -> . ID [ expression ]
    (58) expression -> . ID [ expression ] = expression
    (59) expression -> . NUMBER
    (60) expression -> . ID
    (61) expression -> . & ID
    (62) expression -> . & ID [ expression ]
    (63) expression -> . * ID = expression
    (64) expression -> . * ID
    (67) expression -> . C_CONST
    (68) expression -> . eq_exp
    (69) eq_exp -> . expression EQ expression
    (70) eq_exp -> . expression NE expression
    (71) eq_exp -> . expression LOR expression
    (72) eq_exp -> . expression LAND expression
    (73) eq_exp -> . expression < expression
    (74) eq_exp -> . expression > expression
    (75) eq_exp -> . expression GE expression
    (76) eq_exp -> . expression LE expression

    ID              shift and go to state 24
    PRINTSTR        shift and go to state 27
    MINUSMINUS      shift and go to state 28
    PLUSPLUS        shift and go to state 29
    ~               shift and go to state 33
    -               shift and go to state 30
    (               shift and go to state 26
    NUMBER          shift and go to state 34
    &               shift and go to state 32
    *               shift and go to state 31
    C_CONST         shift and go to state 35

    expression                     shift and go to state 70
    eq_exp                         shift and go to state 36

state 27

    (12) expression -> PRINTSTR . ( S_CONST )

    (               shift and go to state 71


state 28

    (31) expression -> MINUSMINUS . ID

    ID              shift and go to state 72


state 29

    (33) expression -> PLUSPLUS . ID

    ID              shift and go to state 73


state 30

    (55) expression -> - . expression
    (10) expression -> . ID ( )
    (11) expression -> . ID ( expression_list )
    (12) expression -> . PRINTSTR ( S_CONST )
    (31) expression -> . MINUSMINUS ID
    (32) expression -> . ID MINUSMINUS
    (33) expression -> . PLUSPLUS ID
    (34) expression -> . ID PLUSPLUS
    (35) expression -> . ID XOREQUAL expression
    (36) expression -> . ID ANDEQUAL expression
    (37) expression -> . ID OREQUAL expression
    (38) expression -> . ID TIMESEQUAL expression
    (39) expression -> . ID DIVEQUAL expression
    (40) expression -> . ID PLUSEQUAL expression
    (41) expression -> . ID MINUSEQUAL expression
    (42) expression -> . ID = expression
    (47) expression -> . expression + expression
    (48) expression -> . expression - expression
    (49) expression -> . expression * expression
    (50) expression -> . expression / expression
    (51) expression -> . expression & expression
    (52) expression -> . expression | expression
    (53) expression -> . expression ^ expression
    (54) expression -> . ~ expression
    (55) expression -> . - expression
    (56) expression -> . ( expression )
    (57) expression -> . ID [ expression ]
    (58) expression -> . ID [ expression ] = expression
    (59) expression -> . NUMBER
    (60) expression -> . ID
    (61) expression -> . & ID
    (62) expression -> . & ID [ expression ]
    (63) expression -> . * ID = expression
    (64) expression -> . * ID
    (67) expression -> . C_CONST
    (68) expression -> . eq_exp
    (69) eq_exp -> . expression EQ expression
    (70) eq_exp -> . expression NE expression
    (71) eq_exp -> . expression LOR expression
    (72) eq_exp -> . expression LAND expression
    (73) eq_exp -> . expression < expression
    (74) eq_exp -> . expression > expression
    (75) eq_exp -> . expression GE expression
    (76) eq_exp -> . expression LE expression
